--- a/tests/fonts.tex
+++ b/tests/fonts.tex
@@ -14,12 +14,14 @@
 \documentclass{PalisadesLakesArticle}
 \geomHDTV
 \geomLandscape
+
 %\AsanaFonts
-\CormorantFonts
+%\CormorantFonts
 %\EBGaramondFonts
 %\ErewhonFonts
 %\FiraFonts
 %\GFSNeohellenicFonts
+\KpFonts
 %\LibertinusFonts
 %\BonumFonts
 %\PagellaFonts
