--- a/tests/math.tex
+++ b/tests/math.tex
@@ -16,11 +16,12 @@
 \geomLandscape
 
 %\AsanaFonts
-\CormorantFonts
+%\CormorantFonts
 %\EBGaramondFonts
 %\ErewhonFonts
 %\FiraFonts
 %\GFSNeohellenicFonts
+\KpFonts
 %\LibertinusFonts
 %\BonumFonts
 %\PagellaFonts
@@ -205,7 +206,7 @@ $\Vector{v}_0 \ldots \Vector{v}_{k}$ is linearly dependent.
 By definition,
 there exists non-zero $a_0 \ldots a_{k}$ such that
 \begin{equation}
-0 = \sum_0^k a_i \Vector{v}_i
+\Vector{0} = \sum_0^k a_i \Vector{v}_i
 \end{equation}
 which implies that
 \begin{equation}
