--- a/tests/fonts.tex
+++ b/tests/fonts.tex
@@ -21,7 +21,8 @@
 %\ErewhonFonts
 %\FiraFonts
 %\GFSNeohellenicFonts
-\KpFonts
+%\KpFonts
+\LatinModernFonts
 %\LibertinusFonts
 %\BonumFonts
 %\PagellaFonts
