update FontFace defs up to KpFonts

--- a/tests/fonts.tex
+++ b/tests/fonts.tex
@@ -16,12 +16,12 @@
 \geomLandscape
 
 %\AsanaFonts
-\CormorantFonts
+%\CormorantFonts
 %\EBGaramondFonts
 %\ErewhonFonts
 %\FiraFonts
 %\GFSNeohellenicFonts
-%\KpFonts
+\KpFonts
 %\LatinModernFonts
 %\LibertinusFonts
 %\BonumFonts
