--- a/tests/math.tex
+++ b/tests/math.tex
@@ -21,8 +21,8 @@
 %\ErewhonFonts
 %\FiraFonts
 %\GFSNeohellenicFonts
-%\KpFonts
-\LatinModernFonts
+\KpFonts
+%\LatinModernFonts
 %\LibertinusFonts
 %\BonumFonts
 %\PagellaFonts
